--- a/src/Discord.Net.InteractionsService.Abstractions/Discord.Net.InteractionsService.Abstractions.csproj
+++ b/src/Discord.Net.InteractionsService.Abstractions/Discord.Net.InteractionsService.Abstractions.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Discord.Net.InteractionsService.Abstractions</AssemblyName>
         <RootNamespace>Discord.Net.InteractionsService.Abstractions</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
