--- a/src/Discord.Net.InteractionsService.DI/Discord.Net.InteractionsService.DI.csproj
+++ b/src/Discord.Net.InteractionsService.DI/Discord.Net.InteractionsService.DI.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Discord.Net.InteractionsService.DI</AssemblyName>
         <RootNamespace>Discord.Net.InteractionsService.DI</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
