--- a/src/Discord.Net.InteractionsService/Discord.Net.InteractionsService.csproj
+++ b/src/Discord.Net.InteractionsService/Discord.Net.InteractionsService.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Discord.Net.InteractionsService</AssemblyName>
         <RootNamespace>Discord.Net.InteractionsService</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
