--- a/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
+++ b/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
@@ -10,7 +10,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net.Labs.WebSocket" Version="3.0.1-pre" />
+      <ProjectReference Include="..\..\libs\Discord.Net-Labs\src\Discord.Net.Core\Discord.Net.Core.csproj" />
+      <ProjectReference Include="..\..\libs\Discord.Net-Labs\src\Discord.Net.Rest\Discord.Net.Rest.csproj" />
+      <ProjectReference Include="..\..\libs\Discord.Net-Labs\src\Discord.Net.WebSocket\Discord.Net.WebSocket.csproj" />
     </ItemGroup>
 
 </Project>
