--- a/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
+++ b/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
@@ -5,6 +5,8 @@
         <RootNamespace>Discord.Net.Interactions.Abstractions</RootNamespace>
         <Nullable>enable</Nullable>
         <PackageId>Discord.Net.Interactions.Abstractions</PackageId>
+        <Version>1.0.0</Version>
+        <PackageVersion>1.0.0</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
