--- a/src/Discord.Net.Interactions/Discord.Net.Interactions.csproj
+++ b/src/Discord.Net.Interactions/Discord.Net.Interactions.csproj
@@ -5,6 +5,8 @@
         <RootNamespace>Discord.Net.Interactions</RootNamespace>
         <Nullable>enable</Nullable>
         <PackageId>Discord.Net.Interactions</PackageId>
+        <Version>1.0.0</Version>
+        <PackageVersion>1.0.0</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
