--- a/src/Discord.Net.Interactions.Controllers/Discord.Net.Interactions.Controllers.csproj
+++ b/src/Discord.Net.Interactions.Controllers/Discord.Net.Interactions.Controllers.csproj
@@ -8,10 +8,12 @@
     <ItemGroup>
       <PackageReference Include="Discord.Net.Labs.Core" Version="3.0.1-pre" />
       <PackageReference Include="Discord.Net.Labs.WebSocket" Version="3.0.1-pre" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Discord.Net.Interactions.Abstractions\Discord.Net.Interactions.Abstractions.csproj" />
+      <ProjectReference Include="..\Discord.Net.Interactions\Discord.Net.Interactions.csproj" />
     </ItemGroup>
 
 </Project>
