docs: add controllers example

--- a/src/Example.Controllers/Example.Controllers.csproj
+++ b/src/Example.Controllers/Example.Controllers.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>Discord.Net.Interactions.Example.Controllers</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Discord.Net.Interactions.Controllers\Discord.Net.Interactions.Controllers.csproj" />
+    </ItemGroup>
+
 </Project>
