chore: update discord net labs to v3.0.0

--- a/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
+++ b/src/Discord.Net.Interactions.Abstractions/Discord.Net.Interactions.Abstractions.csproj
@@ -10,7 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net.Labs.WebSocket" Version="3.0.1-pre" />
+      <PackageReference Include="Discord.Net.Labs.WebSocket" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
